--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/FLC-Data/flc-core-data"
 
   [tool.poetry.dependencies]
   python = "^3.8"
+  pre-commit = "^2.17.0"
 
   [tool.poetry.dev-dependencies]
   flake8 = "3.9.2"
