--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,13 @@ repository = "https://github.com/FLC-Data/flc-core-data"
   [tool.poetry.dependencies]
   python = "^3.8"
   pre-commit = "^2.17.0"
+  requests = "^2.27.1"
 
   [tool.poetry.dev-dependencies]
   flake8 = "3.9.2"
+
+  [tool.poetry.scripts]
+  jira-script = "flc_core_data.hello_world:cli"
 
 [build-system]
 requires = ["poetry-core"]
