--- a/.github/workflows/pull_request_opened.yml
+++ b/.github/workflows/pull_request_opened.yml
@@ -35,4 +35,7 @@ jobs:
         run: poetry run flake8
 
       - name: tasks
-        run: poetry run jira-script Jiu token
+        run: poetry run jira-script 10004 ${{ secrets.FLC_JIRA_TOKEN }}
+
+      - name: echo_task
+        run: echo ${{ steps.tasks.outputs.* }}
