--- a/.github/workflows/pull_request_opened.yml
+++ b/.github/workflows/pull_request_opened.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Jira
         run: |
           output=$(poetry run jira-script 10004 ${{ secrets.FLC_JIRA_TOKEN }})
-          echo "::set-output name=jira-issue::$output"
+          echo ::set-output name=jira-issue::$output
 
       - name: echo_task
         run: echo ${{ steps.Jira.output.jira-issue }}
