feat: testing cli jira

--- a/.github/workflows/pull_request_opened.yml
+++ b/.github/workflows/pull_request_opened.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Jira Issues Description
         id: jira
-        run: echo "::set-output name=issue::$((poetry run jira-script 10004 ${{ secrets.FLC_JIRA_TOKEN }}))"
+        run: echo "::set-output name=issue::$(poetry run jira-script 10004 ${{ secrets.FLC_JIRA_TOKEN }})"
 
       - name: echo_task
         env:
