feat: testing cli jira

--- a/.github/workflows/pull_request_opened.yml
+++ b/.github/workflows/pull_request_opened.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: echo_task
         id: echo_jira
-        run: echo "${{ steps.jira.output.issue }}"
+        run: echo "${{ steps.jira.outputs.issue }}"
