--- a/.github/workflows/pull_request_opened.yml
+++ b/.github/workflows/pull_request_opened.yml
@@ -44,8 +44,8 @@ jobs:
 
       - name: Echo Branch
         id: echo_branch
-        run: $({GITHUB_REF#refs/heads/})"
+        run: echo "${{ GITHUB_REF#refs/heads/ }}"
 
       - name: Current Branch
         id: current_branch
-        run: echo "::set-output name=branch::$({GITHUB_REF#refs/heads/})"
+        run: echo "::set-output name=branch::${{ GITHUB_REF#refs/heads/ }}"
