--- a/.github/workflows/pull_request_opened.yml
+++ b/.github/workflows/pull_request_opened.yml
@@ -44,8 +44,8 @@ jobs:
 
       - name: Echo Branch
         id: echo_branch
-        run: echo "${{ GITHUB_REF#refs/heads/ }}"
+        run: echo "${{ github.ref }}"
 
       - name: Current Branch
         id: current_branch
-        run: echo "::set-output name=branch::${{ GITHUB_REF#refs/heads/ }}"
+        run: echo "::set-output name=branch::${{ github.ref }}"
